[project]
name = "epo-oa-cli"
version = "0.2.0"
description = "EPO 특허 심사과정 분석 CLI — 문서 다운로드 · PDF 파싱 · MD 생성"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.0",
    "pypdf>=6.0",
    "requests>=2.34.2",
    "rich>=15.0.0",
]

[project.scripts]
epo-oa = "epo_oa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epo_oa"]

[project.optional-dependencies]
ocr = ["ocrmypdf>=16.0"]
